Fixes #28 with the play button moving off screen

--- a/app/authoring/videogular.css
+++ b/app/authoring/videogular.css
@@ -34,33 +34,6 @@ h2 {
 	margin: 5px;
 }
 
-@media (max-width: 700px), (max-height: 440px) {
-	videogular {
-	    height: 80vh;
-    }
-    videogular vg-video {
-        height: 100%;
-        max-height: 100%;
-    }
-    h2 {
-		font-size: 5vw;
-		margin-left: 0.5vw;
-        margin-right: 0.5vw;
-        margin-top: 0.5vh;
-        margin-bottom: 0.5vh;
-	}
-}
-
-@media (min-width: 700px) and (min-height: 440px) {
-	videogular {
-        max-width: 700px;
-		left: 50%;
-		margin-left: -350px;
-		background-color: #000000;
-		display: block;
-    }
-}
-
 @media (min-width: 600px) {
     h2 {
         font-size: 1.5em;
